# desdeo-tools

./: .gitignore  IKRVEA_example.ipynb  README.md  pyproject.toml  requirements.txt
.github/workflows/: DESDEO-tools.yml  Lint.yml  automate-DESDEO-tools.yml  ruff.yml
desdeo_tools/interaction/: __init__.py  request.py  validators.py
desdeo_tools/maps/: __init__.py  preference_incorporated_space_RP.py
desdeo_tools/scalarization/: ASF.py  EpsilonConstraintMethod.py  GLIDE_II.py  MOEADSF.py  Scalarizer.py  __init__.py
desdeo_tools/solver/: ScalarSolver.py  __init__.py
desdeo_tools/utilities/: __init__.py  distance_to_reference_point.py  fast_non_dominated_sorting.py  lattice_generators.py  model_management.py  pmod.py  polytopes.py  preference_converters.py  quality_indicator.py
docs/: api.rst  conf.py  examples.rst  index.rst  requirements.txt
docs/_templates/: layout.html
docs/api/: desdeo_tools.interaction.PrintRequest.rst  desdeo_tools.interaction.ReferencePointPreference.rst  desdeo_tools.interaction.SimplePlotRequest.rst  desdeo_tools.interaction.validate_ref_point_data_type.rst  desdeo_tools.interaction.validate_ref_point_dimensions.rst  desdeo_tools.interaction.validate_ref_point_with_ideal.rst  desdeo_tools.interaction.validate_ref_point_with_ideal_and_nadir.rst  desdeo_tools.interaction.validate_with_ref_point_nadir.rst  desdeo_tools.scalarization.AugmentedGuessASF.rst  desdeo_tools.scalarization.DiscreteScalarizer.rst  desdeo_tools.scalarization.MaxOfTwoASF.rst  desdeo_tools.scalarization.PointMethodASF.rst  desdeo_tools.scalarization.ReferencePointASF.rst  desdeo_tools.scalarization.Scalarizer.rst  desdeo_tools.scalarization.SimpleASF.rst  desdeo_tools.scalarization.StomASF.rst  desdeo_tools.solver.DiscreteMinimizer.rst  desdeo_tools.solver.ScalarMethod.rst  desdeo_tools.solver.ScalarMinimizer.rst  desdeo_tools.solver.ScalarSolverException.rst
docs/notebooks/: Reference_point.ipynb
examples/: Scalarization.ipynb  Scaralizer_and_ScalarSolver.ipynb  Untitled.ipynb
tests/: pyproject.toml
tests/scalarization/: test_asf.py  test_scalarization.py
tests/solver/: test_integersolver.py  test_scalarsolver.py
