[tool.poetry]
name = "desdeo-tools"
version = "1.9.0"
description = "Generic tools and design language used in the DESDEO framework"
authors = ["Bhupinder Saini", "Giovanni Misitano", "Antti Luopajärvi"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
numpy = "^1.17"
pandas = "^1.0"
scipy = "^1.2"
numba = "^0.58"
hvwfg = "^1.0.2"

[tool.poetry.extras]
mixed-integer-solver = ["rbfopt"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.291"
flake8 = "^3.7"
pylint = "^2.4"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
# jupyter = "^1.0"
matplotlib = "^3.2.1"
pytest = ">=6.2.5"
rope = "^0.16.0"
sphinx = "^6.1.0"
sphinx-autoapi = "^2.0.0"
recommonmark = "^0.6.0"
sphinx_rtd_theme = "^1.2.0"
sphinx_autodoc_typehints = "^1.10.3"
sphinx-automodapi = "^0.12"
rstcheck = "^3.3.1"
nbsphinx = "^0.8.11"
IPython = "^7.31.1"
ipykernel = "^5.3.0"
plotly = "^4.14.3"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = []
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
